# At some point, we may want to consider using GLOB to automatically detect the
# directories here, but for now, do everything manually since it is marginally
# "safer".

add_subdirectory(copy)
# add_subdirectory(euler3d)
add_subdirectory(raytracer)
add_subdirectory(saxpy)
add_subdirectory(srad)
add_subdirectory(vecadd)
